# stock-sentiment-tracker

./: .dockerignore  LICENSE  README.md  docker-compose.yaml
.github/workflows/: main.yml
api/: .gitignore  README.md  main.py  pyproject.toml
api/app/: main.py
api/app/api/: api.py
api/app/flux_queries/: __init__.py  query_builder.py
api/data_ingestion/: api.py  preprocessing.py  stocks.py
api/data_ingestion/aggregators/: logging.conf  reddit-aggregator.py  twitter-aggregator.py
api/data_ingestion/sentiment_analysis/: sentiment_analysis.py
docker_files/: Dockerfile.aggregators  Dockerfile.api  Dockerfile.sentiment_analysis  Dockerfile.ui
src/backend/: .gitignore  README.md  pyproject.toml  stocks.json
src/backend/app/: main.py
src/backend/app/api/: api.py
src/backend/app/flux_queries/: __init__.py  query_builder.py
src/backend/data_ingestion/: stocks.py
src/backend/data_ingestion/aggregators/: entrypoint.sh  reddit-aggregator.py  twitter-aggregator.py
src/backend/data_ingestion/sentiment_analysis/: entrypoint.sh  preprocessing.py  sentiment_analysis.py
src/ui/: README.md
src/ui/config/: paths.js
src/ui/public/: index.html
src/ui/src/css/: Offcanvas.css
src/ui/src/js/: DefaultPage.js  ErrorPage.js  Offcanvas.js  Routes.js  hooks.js  index.js
src/ui/src/js/components/: App.js  CompanyDetails.js  DefaultPage.js  ErrorPage.js  Offcanvas.js
ui/: README.md  package-lock.json  package.json
ui/src/css/: CompanyDetails.css  DefaultPage.css  ErrorPage.css  Offcanvas.css
ui/src/js/: App.js  CompanyDetails.js  DefaultPage.js  Navbar.js  Offcanvas.js  Routes.js  index.js
ui/src/tests/: App.test.js
