[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend to stock sentiment tracker platform"
authors = ["Harshaa Vardaan"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"


[tool.poetry.group.api.dependencies]
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
yfinance = "^0.1.87"
fastapi-redis-cache = "^0.2.5"
influxdb-client = "^1.35.0"


[tool.poetry.group.aggregators.dependencies]
tweepy = "^4.12.1"
praw = "^7.6.1"
celery = "^5.2.7"


[tool.poetry.group.sentiment-analysis.dependencies]
emoji = "^2.2.0"
nltk = "^3.7"
transformers = "^4.25.1"
influxdb-client = "^1.35.0"
scipy = "^1.9.3"
celery = "^5.2.7"
poethepoet = "^0.16.5"
flower = "^1.2.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
black = "^22.10.0"
pylint = "^2.15.5"


[tool.poe.tasks]
download-pytorch-cuda11 = "pip install torch==1.12.1+cu116 --extra-index-url https://download.pytorch.org/whl/cu116"
download-pytorch-cpu = "pip install torch==1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"